Fixing some issues with namings
